--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "pg": "^8.13.0"
   },
@@ -33,6 +34,7 @@
     "@types/argon2": "^0.14.1",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/method-override": "^0.0.35",
     "@types/node": "^22.7.5",
     "@types/pg": "^8.11.10",
